# drumslice-id

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DECISIONS.md  IMPLEMENTATION_SPEC.md  IMPLEMENTATION_STATUS.md  KNOWN_LIMITATIONS.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  install.ps1  install.sh  uninstall.ps1  uninstall.sh
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: ALPHA_RELEASE_NOTES.md  ARCHITECTURE.md  MIGRATION.md  RELEASE_CHECKLIST.md  TECHNICAL_REFERENCE.md  TROUBLESHOOTING.md  USER_GUIDE.md
max/: DrumSliceID.maxproj  SliceLabeler.maxproj  package-info.json
max/javascript/: live_controller.js  live_graph_core.js  live_value_helpers.js  naming_engine.js  results_controller.js  (+1 more)
python/: pyproject.toml  setup.py
python/drumslice_id_worker/: __init__.py  __main__.py  cache.py  events.py  mapping.py  protocol.py
python/drumslice_id_worker/backends/: adtof.py  mock.py
python/slice_labeler_worker/: __init__.py  cache.py  errors.py  events.py  mapping.py  protocol.py  service.py
python/slice_labeler_worker/backends/: __init__.py  adtof.py  base.py  mock.py
release/: DrumSLICE-ID-0.1.0-alpha.1.manifest.json  SHA256SUMS
scripts/: build_max_device.js  build_max_device.md  build_max_js_bundle.js  build_release.py  check_backend.py  check_versions.js  create_test_fixtures.py  install_local.sh  max_device_format.js  setup_backend.ps1  setup_backend.sh  verify_max_device.js
(+43 files in other folders)
